[GreenDev]: Fix minor z-index issue with Close button.
It should be on the same z-index as the rest of the annotation,
to avoid the Close button from one annotation showing up on
top of another.

Bug: 461428483
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/7213818
Auto-Submit: Finnur Thorarinsson <finnur@chromium.org>
Commit-Queue: Finnur Thorarinsson <finnur@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/common/annotation.css
+++ b/front_end/panels/common/annotation.css
@@ -27,7 +27,7 @@
 }
 
 .connectorContainer {
-  z-index: 1001;
+  z-index: 1000;
   overflow: visible;
   pointer-events: none;
 }
@@ -35,6 +35,6 @@
 .close-button {
   position: absolute;
   top:1px;
-  z-index: 1002;
+  z-index: 1000;
   cursor: pointer;
 }
